# Magma-Scanner

./: .env.template  Cargo.toml  README.md
magma-scanner/src/: language_loader.rs  lib.rs  scanner.rs  types.rs
src/: scanner.rs
tests/: README.md  integration_tests.rs  mod.rs  performance_tests.rs  query_tests.rs  scanner_tests.rs
tests/test_repo/: large_test.rs  multi_test_4.rs  test_complex.rs  test_js.js  test_python.py  test_query.rs  test_scan.rs
tests/test_utils/: mod.rs
